# less-is-more-wifi-sensing

./: .gitignore  README.md  docker-compose.yml  physical_map.txt.example
analysis/: REPRODUCIBILITY.md  __init__.py  requirements.txt
analysis/evaluation/: __init__.py  evaluate_presence_detection.py
analysis/preprocessing/: __init__.py  build_dataset.py
analysis/utils/: __init__.py  link_selection.py  reproducibility.py  statistical_tests.py
analysis/visualization/: __init__.py  plot_results.py
backend/: Dockerfile  requirements.txt
backend/src/: config.py  main.py  models.py  receiver.py  registry.py  synchronizer.py
backend/src/scheduler/: __init__.py  tdma_scheduler.py
docs/: TDMA_TIMING_DESIGN.md
firmware/esp-idf/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  main.c
